--- a/Syntax.in
+++ b/Syntax.in
@@ -4,15 +4,15 @@ declaration ::= IDENTIFIER type
 type1 ::= "boolean" | "string" | "int" | "double" | "float"
 arraydecl ::= type1 "[" number "]" IDENTIFIER 
 type ::= type1 | arraydecl
-# cmpdstmt ::= "{" stmtlist "}" # how to do in python-like language with indents???
-stmtlist ::= stmt | stmt "\n" stmtlist
+# cmpdstmt ::= "{" stmtlist "}" # how to do in python-like language with indents?
+stmtlist ::= stmt | (stmt "\n" stmtlist)
 stmt ::= simplstmt | structstmt
 simplstmt ::= assignstmt | iostmt
 assignstmt ::= IDENTIFIER "=" expression
-expression ::= expression ("+" | "-") term | term
-term ::= term ("*" | "/") factor | factor
+expression ::= (expression ("+" | "-") term) | term
+term ::= (term ("*" | "/") factor) | factor
 factor ::= "(" expression ")" | IDENTIFIER
-iostmt ::= "read" | "write" "(" IDENTIFIER ")"
+iostmt ::= ("read" | "write") "(" IDENTIFIER ")"
 structstmt ::= cmpdstmt | ifstmt | whilestmt
 ifstmt ::= "if" condition ":" stmt ["else" stmt]
 forstst ::= "loop" VAR "in" ARRAY
