--- a/Syntax.in
+++ b/Syntax.in
@@ -13,9 +13,9 @@ expression ::= (expression ("+" | "-") term) | term
 term ::= (term ("*" | "/") factor) | factor
 factor ::= "(" expression ")" | IDENTIFIER
 iostmt ::= ("read" | "write") "(" IDENTIFIER ")"
-structstmt ::= cmpdstmt | ifstmt | whilestmt
-ifstmt ::= "if" condition ":" stmt ["else" stmt]
-forstst ::= "loop" VAR "in" ARRAY
+structstmt ::= cmpdstmt | ifstmt | whilestmt | forstmt
+ifstmt ::= "check" condition ":" stmt ["else" stmt]
+forstmt ::= "loop" VAR "in" ARRAY
 whilestmt ::= "while" condition ":" stmt
 condition ::= expression RELATION expression
 RELATION ::= "<" | "<=" | "=" | "<>" | ">=" | ">"
