errors in check

--- a/Syntax.in
+++ b/Syntax.in
@@ -14,7 +14,7 @@ term ::= (term ("*" | "/") factor) | factor
 factor ::= "(" expression ")" | IDENTIFIER
 iostmt ::= ("read" | "write") "(" IDENTIFIER ")"
 structstmt ::= cmpdstmt | ifstmt | whilestmt | forstmt
-ifstmt ::= "check" condition ":" stmt ["else" stmt]
+ifstmt ::= "check" condition ":" stmt {"else check" condition ":" stmt}  ["else" stmt]
 forstmt ::= "loop" VAR "in" ARRAY
 whilestmt ::= "while" condition ":" stmt
 condition ::= expression RELATION expression
