--- a/token.in
+++ b/token.in
@@ -1,3 +1,4 @@
+
 +
 -
 *
@@ -21,6 +22,7 @@
 ;
 "
 #
+,
 whitespace
 int
 string
@@ -30,7 +32,7 @@ boolean
 True
 False
 class
-if
+check
 loop
 break
 continue
@@ -41,3 +43,5 @@ const
 public
 private
 protected
+read
+write
